deployment/kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
  name: "${APPLICATION_NAME}"
spec:
  selector:
    app: "${APPLICATION_NAME}"
  type: ClusterIP
  ports:
    - name: 80-tcp
      protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "${APPLICATION_NAME}"
  labels:
    app: "${APPLICATION_NAME}"
spec:
  selector:
    matchLabels:
      app: "${APPLICATION_NAME}"
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: "${APPLICATION_NAME}"
    spec:
      containers:
        - name: "${APPLICATION_NAME}"
          image: ${IMAGE_TAG}
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 500m
              memory: 500Mi
            limits:
              cpu: 1500m
              memory: 2000Mi
            # livenessProbe:
            #   tcpSocket:
            #     port: 8080
            #   initialDelaySeconds: 5
            #   timeoutSeconds: 5
            #   successThreshold: 1
            #   failureThreshold: 3
            #   periodSeconds: 10
            # readinessProbe:
            #   httpGet:
            #     path: /actuator/health
            #     port: 8080
            #   initialDelaySeconds: "5"
            #   timeoutSeconds: "2"
            #   successThreshold: "1"
            #   failureThreshold: "3"
            #   periodSeconds: "10"
      restartPolicy: Always

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "${APPLICATION_NAME}"
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: api.${APPLICATION_NAME}.${FQDN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${APPLICATION_NAME}
                port:
                  name: 80-tcp
  tls:
    - hosts:
        - api.${APPLICATION_NAME}.${FQDN}
      secretName: tls-cert-${APPLICATION_NAME}.${FQDN}
